--- a/.env
+++ b/.env
@@ -6,12 +6,12 @@ APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=
 
-DB_CONNECTION=sqlsrv
-DB_HOST=127.0.0.1
+
+DB_HOST=muddy-surf.smart-smell-beta.svc.pipeops.internal
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=pipeops
+DB_USERNAME=pipeops_user
+DB_PASSWORD=61c2592bcd68eb1b10598ef41
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -35,3 +35,5 @@ PUSHER_APP_SECRET=SITE_RTL='off'
 APP_TIMEZONE='Africa/Lagos'
 MAIL_FROM_NAME=''
 MAIL_FROM_ADDRESS=''
+
+      
